<resources>
    <string name="app_name">CardView</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="title_activity_chest_and_shoulder">ChestAndShoulderActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_chest_shoulder">Chest and Shoulder</string>
    <string name="Push_Ups1">A push-up is a total-body functional movement that is great for increasing strength and has the added benefit of engaging the core and lower body. Since it\'s a bodyweight exercise, it can be done just about anywhere—with a ton of variations to liven things up.</string>
    <string name="Push_ups2"> 1-Start in a high plank position. Place hands firmly on the ground, directly under shoulders. Ground toes into the floor to stabilize your lower half. Brace core (tighten abs as if preparing to take a punch), engage glutes and hamstrings, and flatten your back so your entire body is neutral and straight.\n\n
    2- Begin to lower your body—keeping back flat and eyes focused about three feet in front of you to maintain a neutral neck—until chest grazes floor. Don\’t let your butt dip or stick out at any point during the move; your body should remain in a straight line from head to toe. Draw shoulder blades back and down, keeping elbows tucked close to your body </string>
    <string name="Sets">Set1:20 Repitition\n
        Set2:18 Repititions\n
        Set3:16 Repititions</string>
    <string name="set2">Set1:8 Repititions\n
    Set2:8 Repititions\n
    Set3:8 Repititions</string>
    <string name="procedure">PROCEDURE</string>
    <string name="sets1">Set1:10-14 Repitition\n
        Set2:10-14 Repititions\n
        Set3:10-14 Repititions</string>
    <string name="db_front_raise">1-Stand tall with your feet hip-width apart. Hold a dumbbell in each hand in front of your thighs. Your palms should face toward you.\n\n
    2-Raise your arms up in front of you. Pause when the dumbbells reach shoulder height. Then slowly return the weights to the starting position.</string>
    <string name="trainer_tips">1. Don\'t lower the weights too quickly.\t Lower them slowly and with control.\n
2. Keep a slight bend in your elbows at all\t times.\n
3. Don\'t use momentum. Focus on\t controlling the movement and getting a\t good contraction in the shoulder.</string>
    <string name="trainer_tips_1">Trainer Tips</string>
    <string name="tips">✓ I suggest performing this exercise using one arm at a time, in order to solely focus the muscle that is being worked.\n

✓ Keep form strict and use minimum momentum.</string>
    <string name="dbpress">1.Start off sitting up straight on a bench, with your feet together flat on the floor, gripping dumbbells in each hand at shoulder height.\n

2.) Then press the weights upward with your wrists rotating outward until you feel a stretch in your shoulders, and hold this position for a count.\n

3.) Return back to the starting position and repeat for as many reps and sets as desired.</string>
    <string name="side_raise">1-Grab two dumbbells in each hand. Start with a lightweight dumbbell. Your starting position will be a dumbbell on each side, with your palms facing you.\n
        2-Keeping your torso stationary, lift the dumbbells to your sides with a slight bend in your elbows until your arms are parallel to the floor. Your arms should be tilted forward, but not too much. \n
        3-Hold the position for a moment and then lower the weight to the starting position.</string>
    <string name="trainer_tips_side_raise">1-Make sure you\’re keeping your upper torso stable and not jerking it to give yourself extra momentum while doing this exercise. Don\’t bend your elbow, too much only slightly and also make sure your wrist doesn\’t come under your elbow.\n
2-Done correctly, the dumbbell side raise is a good exercise to get you started on those big shoulders that ladies love.</string>
    <string name="incline_bench">1- Sit on a 45 degrees incline bench with your feet well stable on the ground and your back in complete contact with the back support. Grasp the barbell with a grip a little bit wider than your shoulders. Take off the bar from the stand and keep your arms almost extended (slightly bend your elbows) above your chest.\n

2- Slowly lower the bar on a vertical line and stop before it touches your chest, then push up with force till you reach the initial position. Feel the contraction of your pectorals and then repeat.\n

3- Inhale while you lower the bar and exhale while you push up.</string>
    <string name="tips2"> I see many people arching their back when they push the bar and that\'s something you have to avoid. The correct position of the bar when it\'s low should be between your neck and your nipples.</string>
    <string name="flat_bench_press">1-Set your feet firmly under the bench\n
2-Squeeze your shoulder blades as you lower the weight down.\n
3-Lower the weight until the barbell or dumbbells are and inch from your chest.\n
4-Explode the weight upwards and extend the weight until your shoulders are locked out.</string>
    <string name="tips3">1. Maintain a strong arch in your back</string>
    <string name="title_activity_cardio0">Cardio</string>
    <string name="elliptical"># Then start this series of intervals, which get longer and then shorter.\n

# Push yourself during the intervals, working at an 8-9 on a 10-point scale, with 10 being your maximum ability and 1 being sitting still.\n

# During the recovery, cut your pace to a 5-7 on that same 10-point scale.\n

# 15-second interval, followed by 15-second recovery. Repeat once.\n
# 30-second interval, followed by 30 seconds of recovery. Repeat once.\n
# 45-second interval, followed by 45-second recovery. Do not repeat.\n
# 1-minute interval, followed by 1-minute recovery. Repeat 3 more times\n
# 30-second interval, followed by 30-second recovery. Repeat once.\n
# 15-second interval, followed by 15-second recovery. Repeat once.</string>
    <string name="trademill1"> # Minutes 0-5: Leave the incline at 0 (flat). Walk at a pace so that you\'re working at a 4 on a scale of 1-10, with 1 being sitting still and 10 being your max.\n

# Minutes 5-7: Set the incline at 5 and adjust your pace so your level of effort is a 7 out of 10.\n

# Minutes 7-8: Keep the incline at 5 and back down your pace slightly, so your level of effort is a 6 out of 10.\n

# Minutes 8-14: Bump up the incline to 6 and rev up your pace, so your level of effort is 8 out of 10.\n

# Minutes 14-17: Lower the incline to 4 and slow down so your level of effort is a 5 out of 10.\n

# Minutes 17-19: Raise the incline to 5 and move faster, so your level of effort is a 7 out of 10.\n

# Minutes 19-20: Keep the incline at 5 and back down your pace so your level of effort is a 6 out of 10.</string>
    <string name="rowing">#Set the damper between 2 and 5.\n
# Warm up for 3-5 minutes at a comfortable pace.\n
# Row 500 meters as quickly as you can, working at a level of 7-9 on a scale of 1-10, where 1 is sitting still and 10 is your max.\n
# Recover 2 minutes at an easier pace. Your level of effort should be a 4-6 out of 10.\n
# Repeat the 500-meter row and 2 minutes of recovery as many times as you like.\n
 Cool down for 3-5 minutes at a comfortable pace.</string>
    <string name="stationary">#Minutes 0-5: Use light resistance. Your level of effort is a 5 on a scale of 1-10, where 1 is sitting still and 10 is your maximum effort.\n

# Minutes 5-10: Bump up to moderate resistance and pedal faster. Level of effort: 7\n

# Minutes 10-15: Shift into heavy resistance and slow down a bit. Level of effort: 8\n

# Minutes 15-20: Still at heavy resistance, slow down some more. Level of effort: 7\n

# Minutes 20-25: Shift to light resistance and pick up the pace. Level of effort: 5\n

# Minutes 25-30: Move into moderate resistance and go a bit faster. Level of effort: 6\n

# Minutes 30-35 Go back to heavy resistance and slow down. Level of effort: 7\n

# Minutes 35-40: Shift to moderate resistance and pedal faster. Level of effort: 6</string>
    <string name="title_activity_cardio">Cardio</string>
    <string name="title_activity_arm__back">Arm Back</string>
    <string name="barbell_curl">1. Push your hips back so your torso bends forward a few degrees.\n
        2. Powerfully extend your hips and begin the curl so the momentum helps you get the bar halfway up.\n
        3. As the bar passes the sticking point, lean back a bit (with abs still braced and knees still bent).
    </string>
    <string name="tips6">While holding the upper arms stationary, curl the weights forward while contracting the biceps as you breathe out. Tip: Only the forearms should move. Continue the movement until your biceps are fully contracted and the bar is at shoulder level. Hold the contracted position for a second and squeeze the biceps hard.</string>
    <string name="dumbell_row">1-Kneel over side of bench by placing knee and hand of supporting arm on bench. Position foot of opposite leg slightly back to side. Grasp dumbbell from floor.\n
    2-Pull dumbbell to up to side until it makes contact with ribs or until upper arm is just beyond horizontal. Return until arm is extended and shoulder is stretched downward.</string>
    <string name="tip14">1-Choose a flat bench and place a dumbbell on each side of it.\n
2-Place the right leg on top of the end of the bench, bend your torso forward from the waist until your upper body is parallel to the floor, and place your right hand on the other end of the bench for support.</string>
    <string name="barbell_shrug">1-Stand up straight with your feet at shoulder width as you hold a barbell with both hands in front of you using a pronated grip (palms facing the thighs). Tip: Your hands should be a little wider than shoulder width apart. You can use wrist wraps for this exercise for a better grip. This will be your starting position.\n
2-Raise your shoulders up as far as you can go as you breathe out and hold the contraction for a second. \n
3-Slowly return to the starting position as you breathe in.</string>
    <string name="tip24">
        Tip: Refrain from trying to lift the barbell by using your biceps.
    </string>
    <string name="set5">Set1:12\n  Set2:10\n  Set3:8</string>
    <string name="spiderman_crunch">Begin in a conventional plank posture along with your forearms on the floor and your body completely straight.\n
        3-Take the right knee forward in the direction of your right elbow, after that go back to the plank posture. Do it again by getting your left knee towards your leftspider man crunch elbow. \n
        2-That\’s one repetition. Change sides for a total of 10 complete reps.</string>
    <string name="dip_chest">1-For this exercise you will need access to parallel bars. To get yourself into the starting position, hold your body at arms length (arms locked) above the bars.\n
2-While breathing in, lower yourself slowly with your torso leaning forward around 30 degrees or so and your elbows flared out slightly until you feel a slight stretch in the chest.\n
3-Once you feel the stretch, use your chest to bring your body back to the starting position as you breathe out. Tip: Remember to squeeze the chest at the top of the movement for a second.\n
4-Repeat the movement for the prescribed amount of repetitions.</string>
</resources>