<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.techoflip.navdemo.cardview.Chest_Shoulder_Exercise">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

       <ImageView
           android:layout_width="match_parent"
           android:layout_height="300sp"
           android:id="@+id/pushups"
           android:layout_marginTop="10dp"
           android:src="@drawable/db_kickback"

           />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/aboutpushups0"
        android:lineSpacingExtra="8dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textColor="@color/bg2"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/sets1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/procedure"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="#78909c"
        android:id="@+id/procedure"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/aboutpushups"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:lineSpacingExtra="10dp"
        android:textSize="18sp"
        android:textColor="#1e88e5"
        android:layout_marginBottom="20dp"
        android:text="@string/dumbell_row"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/trainer_tips_1"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="#78909c"
        android:id="@+id/trainer"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/aboutpushups1"
        android:layout_gravity="center"
        android:lineSpacingExtra="10dp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="100dp"
        android:textSize="18sp"
        android:textColor="#1e88e5"
        android:text="@string/tip14"/>





</LinearLayout>

</ScrollView>
